--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-csslint": "~0.4.0",
     "grunt-contrib-cssmin": "~0.12.1",
+    "grunt-contrib-htmlmin": "~0.3.0",
     "grunt-contrib-jade": "~0.14.1",
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-less": "~1.0.0",
